# cargo-from-template

./: Cargo.toml  handleNewRoute.ts  index.html  readme.md
src/: main.rs
src/display/: mod.rs  questions.rs  screen.rs
src/lib/: files.rs  get_time.rs  mod.rs  preferences.rs
src/libs/: files.rs  mod.rs  preferences.rs
templates/c_component/: %name%.c
templates/c_component/%name%/: %name%.c  %name%.h
templates/express_handle_api_ts/: %name%.ts
templates/html/: %name%.html  index.html
templates/md/__DATE__--%name%/: %name%.md
templates/md_post/: %1%.md
templates/md_post/__Date__--%1%/: %1%.md
templates/react_ts/%1%/: %1%.test.tsx  %1%.tsx  index.ts
templates/react_ts/%name%/: %name%.tsx  index.ts
templates/react_ts_test/%name%/: %name%.test.tsx
templates/readme/: readme.md
templates/rust_module/%name%/: %name$.rs  mod.rs
templates/svelte_file/: %name%.svelte
templates/svelte_folder/%name%/: %name%.svelte
templates/svelte_svg/: %name%.svelte
test/: newTitle.md
