[package]
name = "cargo-from_template"
version = "0.1.0"
edition = "2021"
exclude = ["./templates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
inquire = "0.2.1"
regex = "1"
termion = "*"
confy = "*"
serde_derive = "*"
serde = "*"